[tool.poetry]
name = "celeste-rich-presence"
version = "0.1.0"
description = ""
authors = ["iTrooz"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
json-lxml = "^0.1.4"
psutil = "^5.9.8"
beautifulsoup4 = "^4.12.3"
discoipc = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
