[project]
name = "celeste-rich-presence"
version = "0.2.0"
description = ""
authors = [
    { name = "Kataiser" },
    { name = "iTrooz" },
    { name = "Agatem" },
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "lxml>=6.0.1",
    "psutil>=7.0.0",
    "pypresence>=4.3.0",
]
